syntax = "proto3";
package nexproto;

service WorkProvider {
    rpc NeedWork (WorkRequest) returns (WorkResponse);
    rpc UploadResult (ResultType) returns (ResultAck);
    rpc GetBinary(BinaryRequest) returns (stream BinaryResponse);
}

message WorkRequest {
    string type = 1;
}

message WorkResponse {
    int64 input = 1;
    int64 binary_id = 2;
}

message ResultType {
    StatusType status = 1;
    int64 output = 2;
}

message ResultAck {
    StatusType status = 1;
    string msg = 2;
}

enum StatusType {
    OK = 0;
    Error = 1;
}

message BinaryRequest {
    int64 id = 1;
}

message BinaryResponse {
    BinaryResponseStatus status = 1;
    bytes data = 2;
    string description = 3;
}

enum BinaryResponseStatus {
    BR_OK = 0;
    BR_OKANDFINAL = 1;
    BR_ERROR = 2;
}